# retail-agent-swarm

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  mkdocs.yml  models.py  push_runs.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_logger.py  smoke_test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: base.py  clinic_agent.py  customer_agent.py  distribution_agent.py  history_agent.py  inventory_agent.py  logistics_agent.py  orchestrator.py  pharmacy_agent.py  provider_agent.py
data/: clinic.py  customer_history.py  distribution_center.py  logistics.py  pharmacy.py  provider.py  store_inventory.py
docs/: ARCHITECTURE.md  DESIGN.md  SPEC.md  graph.md  index.md  specification.md
docs/adr/: 001-template.md
runs/: 20260224_025511_ORD-20260224025511.json  INDEX.md
tests/: conftest.py  test_compliance.py  test_features.py  test_integration.py  test_security.py
